# WVTICs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  WVTICs  ics.par  tags
examples/: rayleigh_taylor.par  rotor.par  sphere.par  strong_blast.par
scripts/: parse_gadget_format_two.py  plot_GalaxyCluster.py  plot_galaxy_cluster.py  plot_rayleigh_taylor.py  pre-commit.sh  reformat.sh
src/: .io.c.swp  .positions.c.swp  .setup.c.swp  aux.c  bias_correction.c  diagnostics.c  diagnostics.h  globals.h  ids.c  io.c  io.h  kernel.c  kernel.h  macro.h  magnetic_field.c  main.c  peano.c  peano.h  peanowalk.c  peanowalk.h  positions.c  proto.h  readpng.c  readpng.h  redistribution.c  redistribution.h  setup.c  sort.c  sort.h  sph.c  sph.h  tags  temperatures.c  tree.c  tree.h  unit.c  velocities.c  wvt_relax.c
src/io/: gadgetreader.c  gadgetreader.h
src/problems/: alfven.c  binary_reader.c  blob.c  boss.c  box.c  cluster_merger.c  cluster_merger.h  constant_density.c  disk.c  doubleshock.c  evrard.c  galaxy.c  galaxy_cluster.c  galaxy_cluster.h  gradient.c  gresho.c  grid.c  kelvin_helmholtz.c  keplerian_ring.c  magneticum.c  orszag_tang.c  png.c  problems.h  rayleigh_taylor.c  rotor.c  ryu_jones.c  ryu_jones.h  sawtooth.c  sedov.c  sinewave.c  sodshock.c  sphere.c  strong_blast.c  tophat.c  truelove1.c  user.c  zeldovich_pancake.c
